--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,31 @@
 name: CI
 on:
   push:
+    branches: 
+      - $default-branch
+  pull_request:
+    branches: 
+      - $default-branch
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - uses: olafurpg/setup-scala@v2
-    - name: Compile
-      run: csbt compile
-
+    steps:  
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - uses: coursier/cache-action@v5
+      - id: test
+        name: Test
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: sbt test
+      - name: Send slack notification
+        uses: act10ns/slack@v1
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        with: 
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+        if: secrets.SLACK_WEBHOOK_URL && failure()
