--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: sbt test
+      - name: Try to fail
+        run: exit 1
       - name: Send slack notification
         uses: act10ns/slack@v1
         env:
