--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         with: 
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-        if: env.SLACK_WEBHOOK_URL && failure()
+        if: failure() && env.SLACK_WEBHOOK_URL
