--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,21 +2,42 @@ name: Release
 
 on:
   push:
-    tags: ["*"]
-  workflow_dispatch:
-    branches:
-        - master
-          
+    branches: 
+      - $default-branch
+    tags:
+      - 'v*'
+
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v2
-      - name: Publish
+        with:
+          # We need to unshallow to allow git describe work with last tag
+          fetch-depth: 0
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - uses: coursier/cache-action@v5
+      - id: test
+        name: Test
         env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: sbt test
+      - id: publish-sonatype
+        name: Publish Sonatype
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         run: sbt ci-release
+      - name: Send slack notification
+        uses: act10ns/slack@v1
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        with: 
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+        if: failure() && env.SLACK_WEBHOOK_URL
