Renames to action-processor-integrations

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,6 +4,6 @@ align.openParenDefnSite          = true
 maxColumn                        = 160
 continuationIndent.defnSite      = 2
 assumeStandardLibraryStripMargin = true
-danglingParentheses              = true
+danglingParentheses.preset       = true
 rewrite.rules                    = [SortImports, RedundantBraces, RedundantParens, SortModifiers]
 docstrings                       = JavaDoc
