--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,10 @@ jobs:
         with:
           # We need to unshallow to allow git describe work with last tag
           fetch-depth: 0
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 8
+#       - uses: actions/setup-java@v1
+#         with:
+#           java-version: 8
+      - uses: olafurpg/setup-scala@v2
       - uses: coursier/cache-action@v5
       - id: test
         name: Test
