--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,21 @@
 name: CI
 on:
   push:
-    branches: 
+    branches:
       - master
   pull_request:
-    branches: 
+    branches:
       - master
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:  
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: "adopt"
       - uses: coursier/cache-action@v6
       - id: test
         name: Test
@@ -25,7 +26,7 @@ jobs:
         uses: act10ns/slack@v2
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        with: 
+        with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
         if: failure() && env.SLACK_WEBHOOK_URL
