--- a/.github/workflows/release-sonatype.yml
+++ b/.github/workflows/release-sonatype.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - 'v*'
   workflow_dispatch:
-  
+
 jobs:
   release-sonatype:
     runs-on: ubuntu-latest
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: "adopt"
       - uses: coursier/cache-action@v6
       - id: test
         name: Test
@@ -48,7 +49,7 @@ jobs:
         uses: act10ns/slack@v2
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        with: 
+        with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
         if: failure() && env.SLACK_WEBHOOK_URL
