--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 8
-          distribution: "adopt"
+          java-version: 11
+          distribution: "temurin"
       - uses: coursier/cache-action@v6
       - id: test
         name: Test
