[intenthq/infrastructure#6834] Update Dependabot configuration to add labels and prefix

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,8 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: 'Chore: '
+      prefix: 'chore: '
     labels:
       - github_actions
-      - dependencies
+      - dependabot
       - chore
